# kk2-oraklet

./: README.md  main.py  pyproject.toml  reflektion.md
app/: data.py  main.py  schemas.py
app/chain/: pipeline.py  runnable.py  steps.py
app/tests/: test_ai_mocked.py  test_chain.py  test_endpoints.py
