[project]
name = "kk2-oraklet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi>=0.136.3",
    "huggingface-hub>=0.22",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-multipart>=0.0.30",
    "transformers>=5.9.0",
    "uvicorn>=0.48.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
